Fix url_for() static usage in base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,8 @@
     // sidebar toggle…
   </script>
 
-  <script src="{{ url_for('static','js/sw-init.js') }}" defer></script>
-  <script src="{{ url_for('static','js/queue.js') }}" defer></script>
+  <script src="{{ url_for('static', filename='js/sw-init.js') }}" defer></script>
+<script src="{{ url_for('static', filename='js/queue.js') }}" defer></script>
+
 </body>
 </html>
